# dataflow-agent

./: .env.example  .gitignore  README.md  pyproject.toml
dataflow_agent/: __init__.py  agent.py  cli.py  config.py
dataflow_agent/parsers/: __init__.py  error_extractor.py
dataflow_agent/tools/: __init__.py  dbt_profiler.py  drift_detector.py  file_reader.py  file_writer.py  log_reader.py  schema_inspector.py  schema_validator.py  sql_analyzer.py
dataflow_agent/tools/framework/: airflow.py  dbt.py  prefect.py  spark.py
tests/: test_tools.py
tests/fixtures/: broken_dag.py  dbt_model.sql  fct_orders.sql  int_order_items.sql  manifest.json  mart_revenue.sql  rpt_daily_orders.sql  schema_drift.yml  schema_validate.yml  slow_query.sql  stg_customers.sql  stg_orders.sql
